# machine-learning-con-kedro-

./: Examen_Transversal_Caso_Monopoly.ipynb  examen_transversal_caso_monopoly (2).py  examen_transversal_caso_monopoly .py  readme
mc-monopoly2/: README.md  pyproject.toml  requirements.txt  session_store.db
mc-monopoly2/conf/: logging.yml
mc-monopoly2/conf/base/: catalog.yml
mc-monopoly2/notebooks/: Examen_Transversal_Caso_Monopoly.ipynb
mc-monopoly2/src/mc_drive/: __init__.py  __main__.py
mc-monopoly2/src/mc_drive/pipelines/: mcpip.py
web app/: app.py
web app/model/: svr_model.pkl  tree_model_best.pkl
web app/templates/: app.html
