[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "mc_drive"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
mc-drive = "mc_drive.__main__:main"

[tool.kedro]
package_name = "mc_drive"
project_name = "mc-drive"
kedro_init_version = "0.19.8"
tools = [ "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "mc_drive.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "b939e67d3701484896473162be2d6167"
